WebRTC Encoded Transform と旧 API の切り替えに対応

--- a/example/sendrecv.html
+++ b/example/sendrecv.html
@@ -40,7 +40,7 @@
       }
 
           const modelPath = "https://lyra-wasm.shiguredo.app/2022.2.0/";
-          const wasmPath = "./dist/";
+          const wasmPath = "https://lyra-wasm.shiguredo.app/2022.2.0/";
           Sora.initLyra({modelPath, wasmPath});
 const channelId = 'Sora';
 const debug = false;
