--- a/example/check.html
+++ b/example/check.html
@@ -91,10 +91,10 @@
       <button onclick="stopMultistreamCheck()">切断</button>
 
       <h4>sendrecv, Opus</h4>
-      <div id="multistream-sendrecv-videos" class="multistream" style="display: flex;"></div>
+      <div id="multistream-sendrecv-videos" class="multistream"></div>
 
       <h4>recvonly</h4>
-      <div id="multistream-recvonly-videos" class="multistream" style="display: flex;"></div>
+      <div id="multistream-recvonly-videos" class="multistream"></div>
     </div>
 
     <script src="./sora.js"></script>
@@ -111,6 +111,12 @@
               });
           });
       }
+
+      const searchParams = new URLSearchParams(window.location.search);
+      if (searchParams.has('signalingUrl')) {
+          document.getElementById('signalingUrl').value = searchParams.get('signalingUrl');
+      }
+
 
       let multistreamCheckConnections = [];
       async function startMultistreamCheck() {
