--- a/example/check.html
+++ b/example/check.html
@@ -33,7 +33,7 @@
       <button onclick="startSinglestreamCheck()">接続</button>
       <button onclick="stopSinglestreamCheck()">切断</button>
 
-      <h4>sendonly, Lyra</h4>
+      <h4>sendonly, Opus</h4>
       <div id="singlestream-sendonly-videos" class="singlestream"></div>
 
       <h4>recvonly</h4>
