dataChannelSignaling: true が抜けてる

--- a/example/data_channel_messaging.html
+++ b/example/data_channel_messaging.html
@@ -33,6 +33,7 @@ const debug = true;
 const sora = Sora.connection('ws://127.0.0.1:5000/signaling', debug);
 const options = {
   multistream: true,
+  dataChannelSignaling: true,
   dataChannels: [
     {
       label: "#example",
