チャネル ID を sora にする

--- a/example/e2ee.html
+++ b/example/e2ee.html
@@ -24,7 +24,7 @@
 
         <script src="./sora.js"></script>
         <script type="text/javascript">
-const channelId = 'Sora';
+const channelId = 'sora';
 const debug = false;
 Sora.initE2EE("https://sora-e2ee-wasm.shiguredo.app/2020.2/wasm.wasm").catch((e) => {
   document.querySelector("#error-message").textContent = "E2EE用 wasm ファイルの読み込みに失敗しました";
