--- a/example/data_channel_messaging.html
+++ b/example/data_channel_messaging.html
@@ -28,7 +28,7 @@
 
         <script src="./sora.js"></script>
         <script type="text/javascript">
-const channelId = 'Sora';
+const channelId = 'sora';
 const debug = true;
 const sora = Sora.connection('ws://127.0.0.1:5000/signaling', debug);
 const options = {
