--- a/example/spotlight_recvonly.html
+++ b/example/spotlight_recvonly.html
@@ -15,7 +15,7 @@
 
         <script src="./sora.js"></script>
         <script type="text/javascript">
-const channelId = 'Sora';
+const channelId = 'sora';
 const debug = false;
 const sora = Sora.connection('ws://127.0.0.1:5000/signaling', debug);
 const options = {
