--- a/example/index.html
+++ b/example/index.html
@@ -1,20 +1,23 @@
 <html lang="ja">
-    <head>
-        <meta charset="utf-8">
-        <title>Sora JavaScript SDK example</title>
-    </head>
-    <body>
-        <div class="container">
-          <ul>
-            <li><a href="sendrecv.html">配信視聴サンプル</a></li>
-            <li><a href="sendonly.html">配信サンプル</a></li>
-            <li><a href="recvonly.html">視聴サンプル</a></li>
-            <li><a href="e2ee.html">E2EE配信視聴サンプル</a></li>
-            <li><a href="spotlight_sendrecv.html">スポットライト配信視聴サンプル</a></li>
-            <li><a href="spotlight_recvonly.html">スポットライト視聴サンプル</a></li>
-            <li><a href="simulcast.html">サイマルキャスト配信/視聴サンプル</a></li>
-            <li><a href="data_channel_messaging.html">データチャネルメッセージングサンプル</a></li>
-          </ul>
-        </div>
-    </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Sora JavaScript SDK example</title>
+</head>
+
+<body>
+  <div class="container">
+    <ul>
+      <li><a href="/sendrecv/">配信視聴サンプル</a></li>
+      <li><a href="/sendonly/">配信サンプル</a></li>
+      <li><a href="/recvonly/">視聴サンプル</a></li>
+      <li><a href="/e2ee/">E2EE配信視聴サンプル</a></li>
+      <li><a href="/spotlight_sendrecv/">スポットライト配信視聴サンプル</a></li>
+      <li><a href="/spotlight_recvonly/">スポットライト視聴サンプル</a></li>
+      <li><a href="/simulcast/">サイマルキャスト配信/視聴サンプル</a></li>
+      <li><a href="/data_channel_messaging/">データチャネルメッセージングサンプル</a></li>
+    </ul>
+  </div>
+</body>
+
 </html>
