--- a/examples/index.html
+++ b/examples/index.html
@@ -11,11 +11,11 @@
       <li><a href="/sendrecv/">配信視聴サンプル</a></li>
       <li><a href="/sendonly/">配信サンプル</a></li>
       <li><a href="/recvonly/">視聴サンプル</a></li>
-      <li><a href="/e2ee/">E2EE配信視聴サンプル</a></li>
       <li><a href="/spotlight_sendrecv/">スポットライト配信視聴サンプル</a></li>
       <li><a href="/spotlight_recvonly/">スポットライト視聴サンプル</a></li>
       <li><a href="/simulcast/">サイマルキャスト配信/視聴サンプル</a></li>
-      <li><a href="/data_channel_messaging/">データチャネルメッセージングサンプル</a></li>
+      <li><a href="/messaging/">メッセージングサンプル</a></li>
+      <li><a href="/e2ee/">E2EE配信視聴サンプル</a></li>
     </ul>
   </div>
 </body>
