--- a/examples/sendrecv/index.html
+++ b/examples/sendrecv/index.html
@@ -28,7 +28,7 @@
     </div>
   </div>
 
-  <script type="module" src="./main.js"></script>
+  <script type="module" src="./sendrecv.js"></script>
 </body>
 
 </html>
