ファイル名を変更

--- a/examples/messaging/index.html
+++ b/examples/messaging/index.html
@@ -29,7 +29,7 @@
     </div>
   </div>
 
-  <script type="module" src="./messaging.js"></script>
+  <script type="module" src="./main.mjs"></script>
 </body>
 
 </html>
