--- a/examples/recvonly/index.html
+++ b/examples/recvonly/index.html
@@ -15,7 +15,7 @@
     </div>
   </div>
 
-  <script type="module" src="./recvonly.js"></script>
+  <script type="module" src="./main.mjs"></script>
 </body>
 
 </html>
