--- a/examples/sendonly/index.html
+++ b/examples/sendonly/index.html
@@ -17,7 +17,7 @@
     </div>
   </div>
 
-  <script type="module" src="./sendonly.js"></script>
+  <script type="module" src="./main.mjs"></script>
   </script>
 </body>
 
