--- a/examples/sendrecv/index.html
+++ b/examples/sendrecv/index.html
@@ -15,6 +15,7 @@
         <button id="stop-sendrecv1">stop</button><br />
         <video id="sendrecv1-local-video" autoplay="" playsinline="" controls=""
           style="width: 320px; height: 240px; border: 1px solid black;"></video>
+        <div id="sendrecv1-connection-id"></div>
         <div id="sendrecv1-remote-videos"></div>
       </div>
       <div>
@@ -23,12 +24,13 @@
         <button id="stop-sendrecv2">stop</button><br />
         <video id="sendrecv2-local-video" autoplay="" playsinline="" controls=""
           style="width: 320px; height: 240px; border: 1px solid black;"></video>
+        <div id="sendrecv2-connection-id"></div>
         <div id="sendrecv2-remote-videos"></div>
       </div>
     </div>
   </div>
 
-  <script type="module" src="./sendrecv.js"></script>
+  <script type="module" src="./main.mjs"></script>
 </body>
 
 </html>
