--- a/examples/simulcast/index.html
+++ b/examples/simulcast/index.html
@@ -28,7 +28,7 @@
     </div>
   </div>
 
-  <script type="module" src="./simulcast.js"></script>
+  <script type="module" src="./main.mjs"></script>
 </body>
 
 </html>
