--- a/examples/e2ee/index.html
+++ b/examples/e2ee/index.html
@@ -25,7 +25,7 @@
     </div>
   </div>
 
-  <script type="module" src="./e2ee.js"></script>
+  <script type="module" src="./main.mjs"></script>
 </body>
 
 </html>
