--- a/examples/spotlight_sendrecv/index.html
+++ b/examples/spotlight_sendrecv/index.html
@@ -28,7 +28,7 @@
     </div>
   </div>
 
-  <script type="module" src="./spotlight_sendrecv.js"></script>
+  <script type="module" src="./main.mjs"></script>
 </body>
 
 </html>
