テスト書き換えた

--- a/examples/recvonly/index.html
+++ b/examples/recvonly/index.html
@@ -10,6 +10,7 @@
     <h1>Recvonly test</h1>
     <button id="start-recvonly">start</button>
     <button id="stop-recvonly">stop</button><br />
+    <div id="recvonly-connection-id"></div>
     <div style="display: flex;">
       <div id="remote-videos"></div>
     </div>
