--- a/examples/sendonly/index.html
+++ b/examples/sendonly/index.html
@@ -14,6 +14,7 @@
       <button id="stop-sendonly">stop</button><br />
       <video id="sendonly-local-video" autoplay="" playsinline="" controls=""
         style="width: 320px; height: 240px; border: 1px solid black;"></video>
+      <div id="sendonly-connection-id"></div>
     </div>
   </div>
 
