--- a/examples/spotlight_sendonly/index.html
+++ b/examples/spotlight_sendonly/index.html
@@ -2,21 +2,21 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Spotlight Recvonly test</title>
+  <title>Recvonly test</title>
 </head>
 
 <body>
   <div class="container">
-    <h1>Spotlight Recvonly test</h1>
+    <h1>Recvonly test</h1>
     <button id="start-recvonly">start</button>
     <button id="stop-recvonly">stop</button><br />
-    <div id="recvonly-connection-id"></div>
+    <div id="sendonly-connection-id"></div>
     <div style="display: flex;">
       <div id="remote-videos"></div>
     </div>
   </div>
 
-  <script typ="module" src="./main.mjs"></script>
+  <script type="module" src="./main.mjs"></script>
 </body>
 
 </html>
