--- a/examples/index.html
+++ b/examples/index.html
@@ -12,6 +12,7 @@
       <li><a href="/sendonly/">配信サンプル</a></li>
       <li><a href="/recvonly/">視聴サンプル</a></li>
       <li><a href="/spotlight_sendrecv/">スポットライト配信視聴サンプル</a></li>
+      <li><a href="/spotlight_sendonly/">スポットライト配信サンプル</a></li>
       <li><a href="/spotlight_recvonly/">スポットライト視聴サンプル</a></li>
       <li><a href="/simulcast/">サイマルキャスト配信/視聴サンプル</a></li>
       <li><a href="/messaging/">メッセージングサンプル</a></li>
