--- a/examples/spotlight_sendonly/index.html
+++ b/examples/spotlight_sendonly/index.html
@@ -2,18 +2,17 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Recvonly test</title>
+  <title>Spotlight Sendonly test</title>
 </head>
 
 <body>
   <div class="container">
-    <h1>Recvonly test</h1>
-    <button id="start-recvonly">start</button>
-    <button id="stop-recvonly">stop</button><br />
+    <h1>Spotlight Sendonly test</h1>
+    <button id="start-sendonly">start</button>
+    <button id="stop-sendonly">stop</button><br />
+    <video id="sendonly-local-video" autoplay="" playsinline="" controls=""
+      style="width: 320px; height: 240px; border: 1px solid black;"></video>
     <div id="sendonly-connection-id"></div>
-    <div style="display: flex;">
-      <div id="remote-videos"></div>
-    </div>
   </div>
 
   <script type="module" src="./main.mjs"></script>
