e2ee の e2e test 追加

--- a/examples/e2ee/index.html
+++ b/examples/e2ee/index.html
@@ -14,8 +14,8 @@
         <h2>local</h2>
         <button id="start-sendrecv">start</button>
         <button id="stop-sendrecv">stop</button><br />
-        <p id="local-connection-id"></p>
-        <p id="local-fingerprint"></p>
+        <div id="local-connection-id"></div>
+        <div id="local-fingerprint"></div>
         <video id="sendrecv-local-video" autoplay="" playsinline="" controls=""
           style="width: 320px; height: 240px; border: 1px solid black;"></video>
 
