--- a/examples/spotlight_recvonly/index.html
+++ b/examples/spotlight_recvonly/index.html
@@ -16,7 +16,7 @@
     </div>
   </div>
 
-  <script typ="module" src="./main.mjs"></script>
+  <script type="module" src="./main.mjs"></script>
 </body>
 
 </html>
