--- a/examples/simulcast/index.html
+++ b/examples/simulcast/index.html
@@ -9,21 +9,26 @@
   <div class="container">
     <h1>Simulcast test</h1>
     <button id="start">start</button>
+    <button id="stop">stop</button>
     <div>
-      <h2>sendonly<span id="local-video-client-id"></span></h2>
+      <h2>sendonly</h2>
+      <div id="local-video-connection-id"></div>
       <video id="local-video" autoplay="" playsinline="" controls=""
         style="width: 320px; height: 180px; border: 1px solid blue;"></video>
     </div>
     <div>
-      <h2>recvonly r0<span id="remote-video-client-id-r0"></span></h2>
+      <h2>recvonly r0</h2>
+      <div id="remote-video-connection-id-r0"></div>
       <video id="remote-video-r0" autoplay="" playsinline="" controls="" style="border: 1px solid red;"></video>
     </div>
     <div>
-      <h2>recvonly r1<span id="remote-video-client-id-r1"></span></h2>
+      <h2>recvonly r1</h2>
+      <div id="remote-video-connection-id-r1"></div>
       <video id="remote-video-r1" autoplay="" playsinline="" controls="" style="border: 1px solid red;"></video>
     </div>
     <div>
-      <h2>recvonly r2<span id="remote-video-client-id-r2"></span></h2>
+      <h2>recvonly r2</h2>
+      <div id="remote-video-connection-id-r2"></div>
       <video id="remote-video-r2" autoplay="" playsinline="" controls="" style="border: 1px solid red;"></video>
     </div>
   </div>
