--- a/examples/messaging/index.html
+++ b/examples/messaging/index.html
@@ -11,15 +11,13 @@
     <p>複数のブラウザで開いて sendMessage することで動作確認できます</p>
     <div style="display: flex;">
       <div>
+        <div id="local-connection-id"></div>
         <div style="display: flex;">
           <input type="text" name="message" />
           <button id="send-message" disabled>sendMessage</button><br />
         </div>
-        <button id="start-sendrecv">start</button>
-        <button id="stop-sendrecv">stop</button><br />
-        <video id="sendrecv-local-video" autoplay="" playsinline="" controls=""
-          style="width: 320px; height: 240px; border: 1px solid black;"></video>
-        <div id="sendrecv-remote-videos"></div>
+        <button id="start">start</button>
+        <button id="stop">stop</button><br />
         <div>
           <h3>messages</h3>
           <ul id="received-messages">
