--- a/examples/recvonly/index.html
+++ b/examples/recvonly/index.html
@@ -8,15 +8,15 @@
 <body>
   <div class="container">
     <h1>Recvonly test</h1>
-    <button id="start-recvonly">start</button>
-    <button id="stop-recvonly">stop</button><br />
-    <div id="recvonly-connection-id"></div>
+    <button id="start">start</button>
+    <button id="stop">stop</button><br />
+    <div id="connection-id"></div>
     <div style="display: flex;">
       <div id="remote-videos"></div>
     </div>
   </div>
 
-  <script type="module" src="./main.mjs"></script>
+  <script type="module" src="./main.mts"></script>
 </body>
 
 </html>
