examples の simulcast を class 化

--- a/examples/simulcast/index.html
+++ b/examples/simulcast/index.html
@@ -33,7 +33,7 @@
     </div>
   </div>
 
-  <script type="module" src="./main.mjs"></script>
+  <script type="module" src="./main.mts"></script>
 </body>
 
 </html>
