--- a/examples/spotlight_sendonly/index.html
+++ b/examples/spotlight_sendonly/index.html
@@ -8,14 +8,15 @@
 <body>
   <div class="container">
     <h1>Spotlight Sendonly test</h1>
-    <button id="start-sendonly">start</button>
-    <button id="stop-sendonly">stop</button><br />
-    <video id="sendonly-local-video" autoplay="" playsinline="" controls=""
+    <button id="start">start</button>
+    <button id="stop">stop</button><br />
+    <div id="connection-id"></div>
+    <video id="local-video" autoplay="" playsinline="" controls=""
       style="width: 320px; height: 240px; border: 1px solid black;"></video>
-    <div id="sendonly-connection-id"></div>
   </div>
 
-  <script type="module" src="./main.mjs"></script>
+  <script type="module" src="./main.mts"></script>
+  </script>
 </body>
 
 </html>
