--- a/examples/messaging/index.html
+++ b/examples/messaging/index.html
@@ -11,13 +11,13 @@
     <p>複数のブラウザで開いて sendMessage することで動作確認できます</p>
     <div style="display: flex;">
       <div>
-        <div id="local-connection-id"></div>
+        <div id="connection-id"></div>
         <div style="display: flex;">
           <input type="text" name="message" />
           <button id="send-message" disabled>sendMessage</button><br />
         </div>
         <button id="start">start</button>
-        <button id="stop">stop</button><br />
+        <button id="stop" disabled>stop</button><br />
         <div>
           <h3>messages</h3>
           <ul id="received-messages">
@@ -27,7 +27,7 @@
     </div>
   </div>
 
-  <script type="module" src="./main.mjs"></script>
+  <script type="module" src="./main.mts"></script>
 </body>
 
 </html>
